Revision history for Lufi

?.??.? ????-??-??
	- Notifications when uploading and downloading files (#181)
	- Use Weblate instead of Zanata for translations (https://weblate.framasoft.org/projects/lufi/development/)
	- Add config API endpoint (#183)

0.04.6 2019-11-07
	- Now can send large files (>2Gio) while using a DB other than SQLite (#165)
	- Use customized instance name in <title>

0.04.5 2019-10-14
	- Update german language
	- Smoother progress of progress bar (use smaller chunks)

0.04.4 2019-10-11
	- Fix invitations sorting order (#163)
	- Same behavior on files and invitations tables (striped, invert selection
	  button) (#166)
	- Change row color on hover
	- Fix typo that leads to error in Safari (#164)
	- Fix (for good, I hope) the problem with badly detected URLs in mail
	  sending (#159)
	- Fix unstranslated string (#167)

0.04.3 2019-09 29
	- Translate dates in invitations (#161)
	- Ignore all .conf files in .gitignore
	- Remove redundant fixed_domain setting in conf template

0.04.2 2019-08-14
	- Update german language
	- Fix logout button color on mobile view (#157)

0.04.1 2019-08-12
	- LocalStorage key is now prefix-dependant (#154)
	  This allow to not mix up files in localStorage for two instances if they
	  are on the same domain
	- Fix bug on cookie-based language choice when using two instances on same
	  domain, with one’s path is the beginning of the other instance’s path.
	  WARNING! You need to do a `carton install --deployment …` to have the fix.
	- Fix navbar bug (there can be too much items in it, depending on Lufi
	  settings (LDAP, invitations…), trouble beginning at screens < 1800px)
	- Add setting to customize the instance name (#156)

0.04.0 2019-08-04
	- Allow to zip the files before upload
	- Allow to see what’s in zip file on download page
	- Allow to individually download files from zip file (only if zip created by Lufi)
	- Allow to invite people to send you files on Lufi when using LDAP auth (#150).